--- a/index.html
+++ b/index.html
@@ -177,6 +177,7 @@
   ]
 }
 </script>
+    <meta name="google-site-verification" content="7c4b2f76b0825f43e18b" />
 </head>
  <body class="bg-gray-900 text-white">
   <!-- Header & Navigation -->
